Tweak check-in.less to avoid line-wrap

--- a/static/css/components/check-in.less
+++ b/static/css/components/check-in.less
@@ -57,9 +57,8 @@
 .last-read-date,
 .check-in-prompt {
   border-radius: 0 0 5px 5px;
-  padding: 4px 9px;
   margin-top: -15px;
-  padding-top: 9px;
+  padding: 5px 0;
   border: 1px solid @light-grey;
   font-size: @font-size-label-medium;
   text-align: center;
@@ -116,18 +115,6 @@
     .read-label {
       font-weight: 700;
     }
-  }
-}
-
-.check-in-prompt {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 5px;
-
-  .prompt-options {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 5px;
   }
 }
 
